# Gojo

./: .gitignore  BUILD.md  CMakeLists.txt  IDEAS  INSTALL  Makefile  README  README.md  static-makefile.x64  static-makefile.x86
docs/: api.html  index.html  style.css
examples/: asteroids.gj  bitmap.gj  geetest.gj  gui.gj  ircexample.gj  joytest.gj  pong.gj  snake.gj  test.gj  test2.gj  test3.gj  tiletest.gj  update_tick.gj
examples/modules/: bfont.gj  geeboard.gj  gui.gj  sprite.gj  test.java  tilemap.gj
examples/music/: Stargazer_Shampoo.mod  Zapped-out.mod
examples/resources/: test.gjm
games/gojomon/: game.gj  globals.gj  gojomon.gj  menu.gj  network.gj  player.gj  test.gjm  title.gj
games/gojomon/gojoeditor/: Makefile  draw.c  draw.h  fileops.c  fileops.h  gjmedit  main.c  toolbar.c  toolbar.h  window.c  window.h
games/gojomon/modules/: bfont.gj  geeboard.gj
games/monkeymayhem/: bagoom.gj  block.gj  game.gj  globals.gj  main.gj  map1.gjm  monkeyMap.gjm  player.bak  player.gj  title.gj
games/monkeymayhemlean/: block.gj  game.gj  globals.gj  main.gj  map1.gjm  player.gj  title.gj
games/monkeymayhemlean/modules/: tilemap.gj
games/paperairplanes/: pap.gj  sprite.gj
games/tankfoes/: enemy.gj  globals.gj  map.gjm  net-main.gj  player.gj  sprite.gj
src/: binds.c  binds.h  config.h  conv_funcs.c  conv_funcs.h  errors.c  errors.h  globals.h  main.c
tests/: Makefile  gfx  gfx.c  image  image.c  mixer  mixer.c  net  net.c  on_demand  on_demand.c  sdl  sdl.c  ttf  ttf.c
utils/: game_launcher_template.sh  library-tracker.sh  self-exec-template.sh
(+28 files in other folders)
